# fastapi-tpl

./: .env.example  .gitignore  Dockerfile  Dockerfile.build  README.md  benchmark.py  build_arm64.sh  cli.py  default_db.sqlite3-shm  default_db.sqlite3-wal  deploy.sh  docker-compose.yml  init_schema.sql  main.py  pyproject.toml  pytest.ini  requirements.txt  run_celery.sh  run_celery_integration_tests.sh  run_dev.sh  run_single_test.sh  run_tests.sh  setup.sh  start.sh
app/: serializers.py
app/admin/: __init__.py  admin_views.py  schemas.py
app/core/: deps.py  security.py
app/models/: __init__.py  models.py
app/schemas/: schemas.py  (+1 more)
celery_app/: celery.py  scheduler.py
config/: database.py  logging.py  settings.py
docs/: ADMIN_LOG_QUERY_GUIDE.md  CELERY_INTEGRATION_TEST.md  FASTAPI_VALIDATION_COMPLETE_GUIDE.md  LOGURU_GUIDE.md  LOGURU_IMPLEMENTATION_SUMMARY.md  LOGURU_QUICK_REFERENCE.md  LOGURU_vs_ALTERNATIVES.md  LOG_QUERY_COMPLETE.md  LOG_QUERY_DEMO.md  LOG_QUERY_INTEGRATION_SUMMARY.md  PERIODIC_TASK_TEST_REPORT.md  QUICK_START_LOG_QUERY.md  RESPONSE_CODE_REFERENCE.md  RESPONSE_FORMAT_UNIFICATION.md  SIMPLIFIED_LOG_FORMAT.md  STRUCTURED_LOGGER_GUIDE.md  TEST_COMPLETION_REPORT.md  UNIFIED_RESPONSE_FORMAT.md  VALIDATION_GUIDE.md
examples/: structured_logger_examples.py
http/: admin.http
tests/: __init__.py  conftest.py  pytest.celery.ini  test_auth.py  test_celery_integration.py  test_celery_tasks.py  test_general.py  test_log_queries.py  test_periodic_tasks.py  test_profiles.py  test_sql_client.py  test_users.py  test_validation.py
(+19 files in other folders)
